--- a/frontend/website/src/app/components/profile/profile.component.html
+++ b/frontend/website/src/app/components/profile/profile.component.html
@@ -5,7 +5,7 @@
         <p><b>Name: </b> {{this.authServ.loggedInUser.firstname + ' ' +  this.authServ.loggedInUser.lastname}}</p>
         <p><b>Username: </b>{{this.authServ.loggedInUser.username}}</p>
         <p><b>Email: </b>{{this.authServ.loggedInUser.email}}</p>
-        <button class="button" routerLink="/password-reset">Change Password</button>
+        <button class="btn btn-outline-primary" routerLink="/password-reset">Reset Password</button>
       </div>
 
     </div>
