--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -1,13 +1,12 @@
 .container2 {
   display: flex;
-  padding: 20px;
-  margin: 20px;
+  padding: 10px;
+  margin: 10px;
   display: inline-block;
 }
 
 button {
-  margin: 20px;
-  alignment: center;
+  margin: 10px;
 }
 
 select {
@@ -26,8 +25,10 @@ p {
 
 .recordrow {
 
-  padding: 10px;
-  margin: 10px;
+  padding: 20px;
+  margin: 20px;
+  width: 1250px;
+  height: 150px;
 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
@@ -131,7 +132,25 @@ ngb-timepicker {
 }
 
 .container {
-  padding: 20px;
-  margin: 20px;
+  padding: 30px;
+  margin: 30px;
   display: flex;
+}
+
+
+.vl {
+  border-left: 6px solid blue;
+  height: 1100px;
+  left: 50%;
+  margin-left: 30px;
+  margin-right: 100px;
+  top: 0;
+}
+
+.red-icon {
+  color: red;
+}
+
+.disabled-icon {
+  color: black;
 }
