--- a/frontend/website/src/app/components/neighbors/neighbors.component.html
+++ b/frontend/website/src/app/components/neighbors/neighbors.component.html
@@ -1,1 +1,25 @@
-<p>neighbors works!!dsfadfsfdsfdsdf!!!</p>
+<div class="neighbors-cont">
+    <div class="row neighbors-row">
+        <div class="col-4 records-col">
+            <h2 class="heading-cont"><img src="https://cdn-icons-png.flaticon.com/512/6595/6595966.png" class="neighborhood-icon"> My Neighborhood</h2>
+            <div class="row filter-row">
+                <div class="col">
+                    <div (click)="this.locationService.toggleSearchRadius(10)" [ngStyle]="this.locationService.search_radius == 10?{'background-color': '#dbf1fa'} : {'background-color': '#D3D3D3'}" class="filter">10 miles</div>
+                </div>
+                <div class="col">
+                    <div (click)="this.locationService.toggleSearchRadius(50)" [ngStyle]="this.locationService.search_radius == 50?{'background-color': '#dbf1fa'} : {'background-color': '#D3D3D3'}" class="filter">50 miles</div>
+                </div>
+                <div class="col">
+                    <div (click)="this.locationService.toggleSearchRadius(100)" [ngStyle]="this.locationService.search_radius == 100?{'background-color': '#dbf1fa'} : {'background-color': '#D3D3D3'}" class="filter">100 miles</div>
+                </div>
+                <div class="col">
+                    <div (click)="this.locationService.toggleSearchRadius(0)" [ngStyle]="this.locationService.search_radius == 0?{'background-color': '#dbf1fa'} : {'background-color': '#D3D3D3'}" class="filter">any</div>
+                </div>
+            </div>
+            <app-shared-media *ngFor="let media of mediaxService.allSharedMediax" [title]="media.title" [timestamp]="media.timestamp" [category]="media.category" [views]="media.views" [location]="media.location" [path]="media.pathorkey" [id]="media.id"></app-shared-media>
+        </div>
+        <div class="col-8 map-col">
+            <div class="full" id="map"></div>
+        </div>
+    </div>
+</div>
