--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-primary nav-cont">
   <div *ngIf="loggedIn">
     <i class="bi bi-camera-fill"></i>
     <a mat-button routerLink="home">Home</a>
