--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -135,3 +135,30 @@ ngb-timepicker {
   margin: 20px;
   display: flex;
 }
+
+.share-btn-highlight {
+  background:blue;
+}
+
+
+.share-btn {
+  margin:-10px;
+  margin-top:20px;
+}
+
+.dropdown-cstm {
+  margin:0px;
+}
+
+.login-input {
+  width: 80%;
+}
+
+.dropdown-cont {
+  margin:0px;
+}
+
+.dropdown-cstm-toggle {
+  margin-left:-4px;
+  margin-top:-10px;
+}
