--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -27,7 +27,7 @@ p {
 
   padding: 20px;
   margin: 20px;
-  width: 1250px;
+  width: 125%;
   height: 150px;
 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
