--- a/frontend/website/src/app/components/camera/camera.component.html
+++ b/frontend/website/src/app/components/camera/camera.component.html
@@ -9,5 +9,6 @@
   <button class="btn btn-outline-primary" (click)="saveImage()">Take Snapshot</button>
   <button class="btn btn-outline-primary" (click)="saveImageToCloud()">Take Snapshot & Save to Cloud</button>
   <button class="btn btn-outline-danger" (click)="record()">Record</button>
+  <button class="btn btn-outline-warning" (click)="thermal()">Thermal</button>
 </p>
 </div>
