--- a/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/frontend/website/src/app/components/navigation-bar/navigation-bar.component.html
@@ -5,6 +5,7 @@
     <a mat-button routerLink="camera">Camera</a>
     <a mat-button routerLink="records">Records</a>
     <a mat-button routerLink="neighbors">Neighbors</a>
+    <a mat-button routerLink="devices">My Devices</a>
     <a mat-button routerLink="profile">Profile</a>
     <a mat-button routerLink="faq">FAQ</a>
     <a mat-button routerLink="about-us">About Us</a>
