--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -1,7 +1,7 @@
 .container2 {
   display: flex;
   padding: 10px;
-  margin: 10px;
+  // margin: 10px;
   display: inline-block;
 }
 
@@ -23,21 +23,19 @@ p {
   margin: 20px;
 }
 
-.recordrow {
-
-  padding: 20px;
-  margin: 20px;
-  width: 125%;
-  height: 150px;
-
+.records-cont {
+  width:100%;
+}
+.divider {
+  height:40px;
+}
+tr {
+  margin:50px;
+  padding:50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
+  height:100px;
 }
-
-tr {
-  width:100px;
-}
-
 td {
   padding: 0px;
   margin: 0px;
@@ -133,13 +131,14 @@ ngb-timepicker {
 
 .container {
   padding: 30px;
-  margin: 30px;
+  
   display: flex;
 }
 
 
 .vl {
-  border-left: 6px solid blue;
+  border-left: 4px solid blue;
+  border-radius:20px;
   height: 1200px;
   left: 100%;
   margin-left: 100px;
