--- a/frontend/website/src/app/components/device/device.component.scss
+++ b/frontend/website/src/app/components/device/device.component.scss
@@ -59,6 +59,7 @@
 .health-header {
     font-size: 24px;
     margin-left: 20px;
+    margin-bottom:10px;
 }
 
 .network-header {
@@ -107,4 +108,14 @@
 
 .submit-cont {
     margin-left:-10px;
+}
+
+.motion-image {
+    margin-right:10px;
+    width:25px;
+}
+
+.network-image {
+    width: 20px;
+    margin-right:5px;
 }
